--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -111,7 +111,7 @@
   }
 }
 
-@media screen and (min-width: 300px) and (max-width: 509px) {
+@media screen and (min-width: 200px) and (max-width: 509px) {
   .hero {
     background-size: 15%;
     background-position-x: center;
